add instructions for changing to 'NA'

--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -133,7 +133,8 @@ minor categories at top select the mid layer under I (panel 2). </p>
           loading="lazy" alt="Main table after data item selection" width="500" height="700" />
         <figcaption>Main table after data item selection</figcaption>
 </figure>
-<p>The download format panel lets you select wide CSV, long CSV, or wide XLSX format. Wide CSV is the default. 
+<p>The download format panel lets you select wide CSV, long CSV, or wide XLSX format. Wide CSV is the default. Also, 
+    the default symbol for missing data is a dash '-'. This can be changed to 'NA' in the listbox near the bottom.
     Click on the download button at bottom 
     <img src="images/downloadbutton.PNG" width=80 height=30  style="display: inline-block;"/> to save your selected data.
 </p>
