--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -144,8 +144,8 @@ minor categories at top select the mid layer under I (panel 2). </p>
         <figcaption>Download format panel</figcaption>
 </figure>
 <p>The resulting dataset can be downloaded <a href="../inst/extdata/2005_totals_minor_occupations.csv">here</a>.
-(If your browser attempts to retype this as an xls file, force the type back to csv.) The next page 
-on preprocessing the data uses a similarly 
+(If your browser attempts to retype this as an xls file, force the type back to csv.) The <a href="PreprocessingTheData.html">next page 
+on preprocessing the data</a> uses a similarly 
 <a href="../inst/extdata/2000_totals_minor_occupations.csv">downloaded file with 2000 data</a>.</p>
 </article>
 </main>
