--- a/basic/PreprocessingTheData.html
+++ b/basic/PreprocessingTheData.html
@@ -70,12 +70,12 @@ they appear to be specific to this dataset.</p>
 </p>
 <pre><code class="language-html">=CONCATENATE(LEFT('2000_totals_minor_occupations'!J11,4),"0",LEFT('2000_totals_minor_occupations'!H11,2))
 and
-  =CONCATENATE(LEFT('2000_totals_minor_occupations'!J101,4),LEFT('2000_totals_minor_occupations'!H101,3))
+=CONCATENATE(LEFT('2000_totals_minor_occupations'!J101,4),LEFT('2000_totals_minor_occupations'!H101,3))
 </code></pre>
 <figure>
   <img src="images/Preprocessing03.png"
-        loading="lazy" alt="Extracted worksheet" width="600" height="500" />
-      <figcaption>Extracted worksheet</figcaption>
+        loading="lazy" alt="Extracted dataset" width="600" height="500" />
+      <figcaption>Extracted dataset</figcaption>
 </figure>
 </main>
 </body>
