add xslx file to datasets

--- a/basic/PreprocessingTheData.html
+++ b/basic/PreprocessingTheData.html
@@ -77,6 +77,7 @@ and
         loading="lazy" alt="Extracted dataset" width="600" height="500" />
       <figcaption>Extracted dataset</figcaption>
 </figure>
+<p>If the formulas are converted to values, this <a href="../inst/extdata/2000_totals_minor_occupations.xlsx">XSLX file</a> can be used directly in R.</p>
 </main>
 </body>
 </html>
