add harmonized occupation description

--- a/basic/Harmonizing_1985_2005_occupation_data.html
+++ b/basic/Harmonizing_1985_2005_occupation_data.html
@@ -32,6 +32,14 @@ occupation class totals.</li>
 </ul>
 <p>The harmonized occupation classification and correspondence table can be downloaded from 
 this project's <a href="https://github.com/AlanInTsukuba/tsukuba-segregation/tree/main/inst/extdata" target="blank">repository</a>.</p>
+<p>The harmonizing task was done in a Microsoft Excel workbook with one worksheet for harmonizing and 
+  one worksheet for each of the census years.  
+</p>
+<figure>
+    <img src="images/HarmonizingOccupations01.png"
+          loading="lazy" alt="Worksheet for harmonized occupational classifications" width="600" height="500" />
+        <figcaption>Worksheet for harmonized occupational classifications</figcaption>
+</figure>
 </main>
 <div id="references" class="section level2">
 <h2 class="hasAnchor">
