add ds link to index

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@ Harmonizing 1985-2005 occupation classifications</a></h4>
   <p>The harmonized occupation classifications are used to build a master dataset from the preprocessed occupation-gender 
     data.</p>
   </li>
+  <li>
+    <h4><a href="basic/DescriptiveStatistics.html">
+      Descriptive statistics</a></h4>
+      </li>
   </ol>
 </li>
 </ol>
