propagate Gender Gap Japan change

--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
       <!--<meta name="google-site-verification" content="Z7SEnQaO9LAITbhuwGaI3rFtnpMRKeV9BbaW3LyvP2g" />-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="revised" content="15 November 2021" />
-        <title>Tsukuba and Segregation</title>
+        <title>Gender Gap Japan</title>
 
         <link rel="stylesheet" href="https://latex.now.sh/style.css"> 
         <link rel="stylesheet" href="https://alanintsukuba.github.io/ShowReferencesModal.css"> 
     </head>
 <body>
-<h1>Tsukuba and Segregation</h1>
+<h1>Gender Gap Japan</h1>
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
 16 November 2021</p>
 <div class="abstract"><p>Objective: Apply segregation statistics to government data around and about Tsukuba.
 </p>
-  <p class="abstract">A recently published decomposition method (Elbers, 2021) enables changes in segregation to be decomposed into changes resulting from new units (for example, occupations), disappearing units, changes in groups (for example, gender), changes in units, and structural changes. Elbers has released an R package with clearly written vignette and 
-  documentation. This project will apply this and other segregation statistics methods to Tsukuba and its surroundings using readily available census and other government statistics.</p>
+  <p class="abstract">A recently published decomposition method (Elbers, 2021) enables 
+    changes in segregation to be decomposed into changes resulting from new units 
+    (for example, occupations), disappearing units, changes in groups (for example, gender), 
+    changes in units, and structural changes. Elbers has released an R package with 
+    clearly written vignette and 
+  documentation. This project will apply this and other segregation statistics methods 
+  to gender gaps in Japan using readily available census and other government statistics.</p>
 </div>
 <main>
 <ol>
