add paste0ed distribution rows

--- a/basic/DescriptiveStatistics.html
+++ b/basic/DescriptiveStatistics.html
@@ -52,88 +52,48 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
     <tr><td colspan=7><b>C. Distribution of occupational major groups (%)</b></td></tr>
     <tr><td></td>
         <td>A. SPECIALIST AND TECHNICAL</td>
-        <td style="text-align: center;">11.5</td>
-        <td style="text-align: center;">11.7</td>
-        <td style="text-align: center;">12.7</td>
-        <td style="text-align: center;">13.5</td>
-        <td style="text-align: center;">13.9</td></tr>
+        <td style='text-align: center;'>11.47</td>\n<td style='text-align: center;'>11.66</td>\n<td style='text-align: center;'>12.7</td>\n<td style='text-align: center;'>13.6</td>\n<td style='text-align: center;'>13.9</td>\n</tr>"
         <tr><td></td>
         <td>B. ADMINISTRATIVE AND MANAGERIAL</td>
-        <td style="text-align: center;">4.2</td>
-        <td style="text-align: center;">4.1</td>
-        <td style="text-align: center;">4.2</td>
-        <td style="text-align: center;">2.9</td>
-        <td style="text-align: center;">2.4</td></tr>
+        <td style='text-align: center;'> 4.24</td>\n<td style='text-align: center;'> 4.13</td>\n<td style='text-align: center;'> 4.2</td>\n<td style='text-align: center;'> 2.9</td>\n<td style='text-align: center;'> 2.4</td>\n</tr>"
+ 
         <tr><td></td>
         <td>C. CLERICAL</td>
-        <td style="text-align: center;">14.0</td>
-        <td style="text-align: center;">19.1</td>
-        <td style="text-align: center;">19.3</td>
-        <td style="text-align: center;">19.5</td>
-        <td style="text-align: center;">19.8</td></tr>
+        <td style='text-align: center;'>14.03</td>\n<td style='text-align: center;'>19.11</td>\n<td style='text-align: center;'>19.3</td>\n<td style='text-align: center;'>19.5</td>\n<td style='text-align: center;'>19.8</td>\n</tr>"
+ 
         <tr><td></td>
         <td>D. SALES</td>
-        <td style="text-align: center;">14.9</td>
-        <td style="text-align: center;">14.3</td>
-        <td style="text-align: center;">14.6</td>
-        <td style="text-align: center;">14.9</td>
-        <td style="text-align: center;">14.4</td></tr>
+        <td style='text-align: center;'>14.90</td>\n<td style='text-align: center;'>14.28</td>\n<td style='text-align: center;'>14.6</td>\n<td style='text-align: center;'>14.9</td>\n<td style='text-align: center;'>14.4</td>\n</tr>"
+ 
         <tr><td></td>
         <td>E. SERVICE</td>
-        <td style="text-align: center;">7.5</td>
-        <td style="text-align: center;">7.3</td>
-        <td style="text-align: center;">7.9</td>
-        <td style="text-align: center;">8.9</td>
-        <td style="text-align: center;">10.0</td></tr>
+        <td style='text-align: center;'> 7.47</td>\n<td style='text-align: center;'> 7.27</td>\n<td style='text-align: center;'> 7.9</td>\n<td style='text-align: center;'> 8.9</td>\n<td style='text-align: center;'>10.0</td>\n</tr>"
+ 
         <tr><td></td>
         <td>F. SECURITY</td>
-        <td style="text-align: center;">1.5</td>
-        <td style="text-align: center;">1.4</td>
-        <td style="text-align: center;">1.5</td>
-        <td style="text-align: center;">1.6</td>
-        <td style="text-align: center;">1.7</td></tr>
+        <td style='text-align: center;'> 1.47</td>\n<td style='text-align: center;'> 1.41</td>\n<td style='text-align: center;'> 1.5</td>\n<td style='text-align: center;'> 1.6</td>\n<td style='text-align: center;'> 1.7</td>\n</tr>"
+ 
         <tr><td></td>
         <td>G. AGRICULTURE, FORESTRY AND FISHERY</td>
-        <td style="text-align: center;">9.7</td>
-        <td style="text-align: center;">7.1</td>
-        <td style="text-align: center;">5.9</td>
-        <td style="text-align: center;">5.0</td>
-        <td style="text-align: center;">4.8</td></tr>
+        <td style='text-align: center;'> 9.66</td>\n<td style='text-align: center;'> 7.08</td>\n<td style='text-align: center;'> 5.9</td>\n<td style='text-align: center;'> 5.0</td>\n<td style='text-align: center;'> 4.8</td>\n</tr>"
+ 
         <tr><td></td>
         <td>H. TRANSPORT AND COMMUNICATION</td>
-        <td style="text-align: center;">4.3</td>
-        <td style="text-align: center;">3.8</td>
-        <td style="text-align: center;">3.8</td>
-        <td style="text-align: center;">3.7</td>
-        <td style="text-align: center;">3.5</td></tr>
+        <td style='text-align: center;'> 4.19</td>\n<td style='text-align: center;'> 3.78</td>\n<td style='text-align: center;'> 3.8</td>\n<td style='text-align: center;'> 3.7</td>\n<td style='text-align: center;'> 3.5</td>\n</tr>"
+ 
         <tr><td></td>
-        <td>I1. MANUFACTURING AND PRODUCTION</td>
-        <td style="text-align: center;">21.3</td>
-        <td style="text-align: center;">19.9</td>
-        <td style="text-align: center;">18.0</td>
-        <td style="text-align: center;">17.3</td>
-        <td style="text-align: center;">16.2</td></tr>
+        <td>I-1. MANUFACTURING AND PRODUCTION</td>
+        <td style='text-align: center;'>21.29</td>\n<td style='text-align: center;'>19.85</td>\n<td style='text-align: center;'>18.0</td>\n<td style='text-align: center;'>17.3</td>\n<td style='text-align: center;'>16.2</td>\n</tr>
         <tr><td></td>
-        <td>I2. OPERATORS</td>
-        <td style="text-align: center;">1.7</td>
-        <td style="text-align: center;">1.6</td>
-        <td style="text-align: center;">1.6</td>
-        <td style="text-align: center;">1.6</td>
-        <td style="text-align: center;">1.5</td></tr>
+        <td>I-2. OPERATORS</td>
+        <td style='text-align: center;'> 1.71</td>\n<td style='text-align: center;'> 1.57</td>\n<td style='text-align: center;'> 1.6</td>\n<td style='text-align: center;'> 1.6</td>\n<td style='text-align: center;'> 1.5</td>\n</tr
         <tr><td></td>
-        <td>I3. LABORERS</td>
-        <td style="text-align: center;">9.4</td>
-        <td style="text-align: center;">9.3</td>
-        <td style="text-align: center;">9.8</td>
-        <td style="text-align: center;">9.8</td>
-        <td style="text-align: center;">9.9</td></tr>
+        <td>I-3. LABORERS</td>
+        <td style='text-align: center;'> 9.40</td>\n<td style='text-align: center;'> 9.33</td>\n<td style='text-align: center;'> 9.8</td>\n<td style='text-align: center;'> 9.8</td>\n<td style='text-align: center;'> 9.9</td>\n</tr>
         <tr><td></td>
         <td>J. WORKERS NOC</td>
-        <td style="text-align: center;">0.2</td>
-        <td style="text-align: center;">0.5</td>
-        <td style="text-align: center;">0.6</td>
-        <td style="text-align: center;">1.2</td>
-        <td style="text-align: center;">1.8</td></tr>
+        <td style='text-align: center;'> 0.18</td>\n<td style='text-align: center;'> 0.53</td>\n<td style='text-align: center;'> 0.6</td>\n<td style='text-align: center;'> 1.2</td>\n<td style='text-align: center;'> 1.8</td>\n</tr>
+        <tr><td colspan=7><b>D. Female labor force by major groups (%)</b></td></tr>
     </table>
     <pre><code class="language-html">#' DescriptiveStatistics.R
 #' If not already in the workspace:
