--- a/basic/DissimilarityFollowingUchikoshiMugiyama.html
+++ b/basic/DissimilarityFollowingUchikoshiMugiyama.html
@@ -3,7 +3,7 @@
       <!--<meta name="google-site-verification" content="Z7SEnQaO9LAITbhuwGaI3rFtnpMRKeV9BbaW3LyvP2g" />-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="revised" content="6 December 2021" />
-        <title>Dissimilarity following Uchikoshi and Mugiyama</title>
+        <title>Dissimilarity following Uchikoshi and Mugiyama (2020)</title>
 
         <link rel="stylesheet" href="https://latex.now.sh/style.css"> 
         <link rel="stylesheet" href="https://alanintsukuba.github.io/ShowReferencesModal.css"> 
@@ -19,5 +19,13 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 6 December 2021</p>
 <main>
 </main>
+<div id="references" class="section level2">
+    <h2 class="hasAnchor">
+    <a href="#references" class="anchor"></a>References</h2>
+    <p>Uchikoshi, Fumiya, Ryota Mugiyama. (2020) Trends in Occupational Sex Segregation in Japan: 
+        A Decomposition Analysis of Census Data, 1980-2005. 
+      Japanese Journal of Population Studies. 2020. 56. 9-23 
+      <a href="https://doi.org/10.24454/jps.1901001" class="uri">https://doi.org/10.24454/jps.1901001</a></p>
+          </div>
 </body>
 </html>
