--- a/basic/DissimilarityFollowingUchikoshiMugiyama.html
+++ b/basic/DissimilarityFollowingUchikoshiMugiyama.html
@@ -14,7 +14,7 @@ integrity="sha256-nvJJv9wWKEm88qvoQl9ekL2J+k/RWIsaSScxxlsrv8k=" crossorigin="ano
 integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="anonymous"></script><!--[if lt IE 9]-->    
 </head>
 <body>
-<h1>Dissimilarity following Uchikoshi and Mugiyama</h1>
+<h1>Dissimilarity following Uchikoshi and Mugiyama (2020)</h1>
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
 6 December 2021</p>
 <main>
