--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@ Harmonizing 1985-2005 occupation classifications</a></h4>
   <li>
     <h4><a href="basic/DescriptiveStatistics.html">
       Descriptive statistics</a></h4>
+      <p>This task produces a table of descriptive statistics similar to Table 3 in <a href="#Elbers2021">Elbers (2021)</a>. 
+        Except where noted, the statistics are generated using the R scripts included below.</p>
+  </li>
+  <li>
+    <h4><a href="basic/DissimilarityFollowingUchikoshiMugiyama.html">
+      Dissimilarity following Uchikoshi and Mugiyama (2020)</a></h4>
       </li>
   </ol>
 </li>
@@ -92,7 +98,7 @@ http://www.jstor.org/stable/684286</a>.</p>
 <p>Duncan, Otis Dudley and Duncan, Beverly (1955) A Methodological Analysis of Segregation Indexes.
 American Sociological Review, 20（2）, pp.210–217. 
 <a href="https://www.jstor.org/stable/2088328" class="uri">https://www.jstor.org/stable/2088328</a></p>
-<p>Elbers, B. (2021). A Method for Studying Differences in Segregation Across Time and Space. 
+<p><a id="Elbers2021">Elbers, Benjamin (2021)</a>. A Method for Studying Differences in Segregation Across Time and Space. 
 Sociological Methods &amp; Research. <a href="https://doi.org/10.1177/0049124121986204" 
 class="uri">doi:10.18637/jss.v089.i07</a></p>
 <p>Tivadar, Mihai (2019) OasisR: An R Package to Bring some Order to the World of Segregation Measurement. 
