--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Harmonizing 1985-2005 occupation classifications</a></h4>
     <h4><a href="basic/DescriptiveStatistics.html">
       Descriptive statistics</a></h4>
       <p>This task produces a table of descriptive statistics similar to Table 3 in <a href="#Elbers2021">Elbers (2021)</a>. 
-        Except where noted, the statistics are generated using the R scripts included below.</p>
+        Except where noted, the statistics are generated using the R scripts included.</p>
   </li>
   <li>
     <h4><a href="basic/DissimilarityFollowingUchikoshiMugiyama.html">
