change page title and add refs

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ Harmonizing 1985-2005 occupation classifications</a></h4>
         Except where noted, the statistics are generated using the R scripts included.</p>
   </li>
   <li>
-    <h4><a href="basic/DissimilarityFollowingUchikoshiMugiyama.html">
-      Dissimilarity following Uchikoshi and Mugiyama (2020)</a></h4>
+    <h4><a href="basic/GenderSegregationFollowingUchikoshiMugiyama.html">
+      Occupational gender segregation following Uchikoshi and Mugiyama (2020)</a></h4>
       </li>
   </ol>
 </li>
