--- a/basic/GenderSegregationFollowingUchikoshiMugiyama.html
+++ b/basic/GenderSegregationFollowingUchikoshiMugiyama.html
@@ -18,7 +18,7 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
 6 December 2021</p>
 <main>
-  <p>Uchikoshi and Mugiyama (2020) distinguish changes in occupational gender segregation into 
+  <p>Uchikoshi and Mugiyama (2020) decompose changes in occupational gender segregation into 
     within occupation and between occupation contributions using Duncan and Duncan's dissimilarity 
     index as extended by Fuchs (1975).
   </p>
