--- a/basic/GenderSegregationFollowingUchikoshiMugiyama.html
+++ b/basic/GenderSegregationFollowingUchikoshiMugiyama.html
@@ -51,7 +51,7 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
   <article>
     <h2>Task: R function for Uchikoshi-Mugiyama decomposition</h2>
     <p>Uchikoshi and Mugiyama introduce their decomposition with the following fake example 
-      of the gender compositions of 3 occupations at 2 points in time.</p>
+      with gender compositions of 3 occupations at 2 points in time.</p>
     <table>
       <caption><h4>Fake example</h4></caption>
       <tr><th colspan=2></th><th colspan=3>Gender</th></tr>
