--- a/index.html
+++ b/index.html
@@ -82,7 +82,13 @@ Harmonizing 1985-2005 occupation classifications</a></h4>
   <li>
     <h4><a href="basic/UchikoshiMugiyamaDecompositionRFunction.html">
       Uchikoshi/Mugiyama decomposition R development</a></h4>
-      </li>
+      <p>Develop R functions and script for computing Uchikoshi/Mugiyama decomposition.</p>
+  </li>
+  <li>
+    <h4><a href="basic/ReproduceUMResults.html">
+      Reproduce results from Uchiyama/Mugiyama</a></h4>
+      <p>Use R to reproduce results.</p>
+  </li>
   </ol>
 </li>
 </ol>
